@@ -1,6 +1,7 @@
 2008-02-16  Robert Ancell  <robert.ancell@gmail.com>
 
         * src/lib/chess/board.py: Fix castling regression (Bug #516459)
+	* src/lib/config.py: Catch GError exceptions from GConf (Bug #489878)
 
 2008-02-11  Robert Ancell  <robert.ancell@gmail.com>
 
